set time display to constant width to fix wrapping bug

--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ button {
     white-space: nowrap;
     font-size: 1rem;
     color: white;
+    width: 4rem;
 }
 #pauseButton {
     height: 2rem;
